--- a/ClientApp/src/app/notify/notify.component.css
+++ b/ClientApp/src/app/notify/notify.component.css
@@ -60,6 +60,12 @@
   margin-right: 25px;
 }
 
+.responseDate {
+  float: left;
+  font-size: 8px;
+  margin-left: 25px;
+}
+
 p {
   clear: both;
 }
