--- a/ClientApp/src/app/notify/notify.component.css
+++ b/ClientApp/src/app/notify/notify.component.css
@@ -1,3 +1,12 @@
+.people {
+  vertical-align: middle;
+  float: left;
+  margin-left: 5px;
+}
+
+.cloudIcon {
+  vertical-align: middle;
+}
 
 .sendButton {
   background-color: white;
@@ -15,8 +24,12 @@
 .chat {
   border-style: solid;
   border-width: 1px;
-  height: 275px;
+  height: 300px;
   overflow-y: auto;
+}
+
+.chat::-webkit-scrollbar {
+  display: none;
 }
 
 .head_of_sms {
@@ -25,6 +38,8 @@
   border-width: 1px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  margin-top: 10px;
+  padding: 5px;
 }
 
 .title {
@@ -37,6 +52,10 @@
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   overflow:auto;
+}
+
+.textBar::-webkit-scrollbar {
+  display: none;
 }
 
 .textMessage {
@@ -101,65 +120,3 @@ p {
 	border-radius: 1rem;
   box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
 }
-
-/*
-.sendButton {
-  background-color: white;
-  height: 34px;
-  width: 35px;
-  margin: 5px;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.sendIcon {
-  font-size: 20px;
-}
-
-.chat {
-  border-style: solid;
-  border-width: 1px;
-  margin-top: 5px;
-}
-
-.textMessage {
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 5px;
-  margin-top: 15px;
-  overflow-wrap: break-word;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.myMessage {
-	position: relative;
-	max-width: 60%;
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  float: right;
-
-  background-color: lightskyblue;
-	padding: 15px 15px;
-	font-size: 10px;
-	border-radius: 1rem;
-  box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
-}
-
-.response {
-	max-width: 60%;
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  float: left;
-
-	background-color: #fff;
-	padding: 15px 15px;
-	font-size: 10px;
-	border-radius: 1rem;
-  box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
-}
-*/
