--- a/ClientApp/src/app/notify/notify.component.css
+++ b/ClientApp/src/app/notify/notify.component.css
@@ -1,11 +1,30 @@
 .people {
   vertical-align: middle;
   float: left;
-  margin-left: 5px;
+  margin-left: 2px;
+  margin-top: 5px;
+  margin-bottom: 1px;
+}
+
+
+.active_agents_txt{
+  margin-top: 10px;
+  margin-bottom: 15px;
 }
 
 .cloudIcon {
   vertical-align: middle;
+}
+
+.chat {
+  border-style: solid;
+  border-width: 1px;
+  height: 300px;
+  overflow-y: auto;
+}
+
+.online_icon{
+  margin-right: 5px;
 }
 
 .sendButton {
@@ -19,13 +38,6 @@
 
 .sendIcon {
   font-size: 20px;
-}
-
-.chat {
-  border-style: solid;
-  border-width: 1px;
-  height: 300px;
-  overflow-y: auto;
 }
 
 .chat::-webkit-scrollbar {
@@ -113,7 +125,6 @@ p {
   margin-top: 10px;
   margin-bottom: 10px;
   float: left;
-
 	background-color: #fff;
 	padding: 15px 15px;
 	font-size: 10px;
