--- a/ClientApp/src/app/notify/notify.component.css
+++ b/ClientApp/src/app/notify/notify.component.css
@@ -4,6 +4,7 @@
   margin-left: 2px;
   margin-top: 5px;
   margin-bottom: 1px;
+  width: 10px;
 }
 
 
@@ -52,6 +53,9 @@
   border-top-right-radius: 5px;
   margin-top: 10px;
   padding: 5px;
+  display: flex;
+  position: relative;
+  gap: 15px;
 }
 
 .title {
