--- a/ClientApp/src/app/notify/notify.component.html
+++ b/ClientApp/src/app/notify/notify.component.html
@@ -1,18 +1,23 @@
-
-<!--Menu for displaying User list-->
-  <mat-menu #menu="matMenu">
-    <b class="active_agents_txt">Agents Active</b>
-    <p *ngFor="let user of userList" mat-menu-item><img src="https://www.clipartmax.com/png/middle/151-1515524_green-light-button.png" class="online_icon" width="10px" height="10px">{{user.username}}</p>
-  </mat-menu>
-
-
 <div class="minimizeContainer" id="notify">
   <!-- Title on the chat box -->
   <div class="head_of_sms">
     <!--Attaching icon button to trigger the userlist from the User List menu-->
-    <div class="peopleButton" style="width: 20%"><button mat-button [matMenuTriggerFor]="menu"><mat-icon class="people" matBadge="{{ usersOnline }}" matBadgeSize="small">people</mat-icon></button></div>
-    <div class="davinciChatHeader" style="width: 60%; text-align: center; align-self: center;"><h6 class="title" style="margin-bottom: 0px;">DaVinci Chat <mat-icon class="cloudIcon">cloud</mat-icon></h6></div>
-    <div class="filler" style="width: 20%"></div>
+    <button mat-button [matMenuTriggerFor]="agents"><mat-icon class="people" matBadge="{{ usersOnline }}" matBadgeSize="small">people</mat-icon></button>
+    <mat-menu #agents="matMenu">
+      <b>Agents Online ({{usersOnline}})</b>
+      <div *ngFor="let user of userList">
+        <button mat-menu-item [matMenuTriggerFor]="users"><img src="https://www.clipartmax.com/png/middle/151-1515524_green-light-button.png" class="online_icon" width="10px" height="10px">
+          {{user.username}}</button>
+        <mat-menu #users="matMenu">
+          <mat-menu-item class="details_div">
+            <u><b>Agent Details</b></u><br>
+            <b>Name:</b> {{user.username}} {{user.lastname}}<br>
+            <b>Email:</b> {{user.email}}
+        </mat-menu-item>
+        </mat-menu>
+      </div>
+    </mat-menu>
+    <h6 class="title" style="text-align: center; margin-bottom: 0px; vertical-align: middle;">DaVinci Chat <mat-icon class="cloudIcon">cloud</mat-icon></h6>
   </div>
     <!-- Container containing all of the messages -->
     <div #entireChat class="chat">
@@ -51,6 +56,8 @@
       <button class="sendButton" id="sender" (click)="textSent(notificationMessage.value)" mat-icon-button><mat-icon class="sendIcon">send</mat-icon></button>
   </div>
 </div>
+
+
 
 
 
