--- a/ClientApp/src/app/notify/notify.component.html
+++ b/ClientApp/src/app/notify/notify.component.html
@@ -5,7 +5,7 @@
     <div class="peopleButton" style="width: 20%"><button mat-button [matMenuTriggerFor]="agents"><mat-icon class="people" matBadge="{{ usersOnline }}" matBadgeSize="small">people</mat-icon></button></div>
     <mat-menu #agents="matMenu">
       <div style="font-size: 14px;"><b>Agents Online ({{usersOnline}})</b></div>
-      <div *ngFor="let user of userList">
+      <div *ngFor="let user of sorted">
         <button mat-menu-item [matMenuTriggerFor]="users" style="font-size: 12px;"><img src="https://www.clipartmax.com/png/middle/151-1515524_green-light-button.png" class="online_icon" width="10px" height="10px">
           {{user.username}}</button>
         <mat-menu #users="matMenu">
