--- a/ClientApp/src/app/notify/notify.component.html
+++ b/ClientApp/src/app/notify/notify.component.html
@@ -2,16 +2,16 @@
   <!-- Title on the chat box -->
   <div class="head_of_sms">
     <!--Attaching icon button to trigger the userlist from the User List menu-->
-    <div class="peopleButton" style="width: 20%"><button mat-button [matMenuTriggerFor]="agents"><mat-icon class="people" matBadge="{{ usersOnline }}" matBadgeSize="small">people</mat-icon></button></div>
+    <div class="peopleButton" style="width: 20%"><button mat-button [matMenuTriggerFor]="agents"><mat-icon class="people" matBadge="{{ userCount }}" matBadgeSize="small">people</mat-icon></button></div>
     <mat-menu #agents="matMenu">
-      <div style="font-size: 14px;"><b>Agents Online ({{usersOnline}})</b></div>
+      <div style=" text-align: center; font-size: 13px;"><b>Agents Online ({{userCount}})</b></div>
       <div *ngFor="let user of sorted">
-        <button mat-menu-item [matMenuTriggerFor]="users" style="font-size: 12px;"><img src="https://www.clipartmax.com/png/middle/151-1515524_green-light-button.png" class="online_icon" width="10px" height="10px">
+        <button mat-menu-item [matMenuTriggerFor]="users" style="font-size: 13px;"><img src="https://www.clipartmax.com/png/middle/151-1515524_green-light-button.png" class="online_icon" width="10px" height="10px">
           {{user.username}}</button>
         <mat-menu #users="matMenu">
           <mat-menu-item class="details_div">
-            <div style="text-align: center;"><u><b>Agent Details</b></u><br></div>
-            <div style="margin-left: 5px;">
+            <div style="text-align: center; margin-bottom: 6px; font-size: 12px;"><u><b>Agent Details</b></u><br></div>
+            <div style="margin-left: 5px; margin-right: 5px;">
               <b>Name:</b> {{user.username}} {{user.lastname}}<br>
               <b>Email:</b> {{user.email}}
             </div>
