--- a/ClientApp/src/app/notify/notify.component.html
+++ b/ClientApp/src/app/notify/notify.component.html
@@ -1,62 +1,72 @@
-<div class="minimizeContainer" id="notify">
-  <!-- Title on the chat box -->
-  <div class="head_of_sms">
-    <!--Attaching icon button to trigger the userlist from the User List menu-->
-    <div class="peopleButton" style="width: 20%"><button mat-button [matMenuTriggerFor]="agents"><mat-icon class="people" matBadge="{{ userCount }}" matBadgeSize="small">people</mat-icon></button></div>
-    <mat-menu #agents="matMenu">
-      <div style=" text-align: center; font-size: 13px;"><b>Agents Online ({{userCount}})</b></div>
-      <div *ngFor="let user of sortedList">
-        <button mat-menu-item [matMenuTriggerFor]="users" style="font-size: 13px;"><img src="https://www.clipartmax.com/png/middle/151-1515524_green-light-button.png" class="online_icon" width="10px" height="10px">
-          {{user.username}}</button>
-        <mat-menu #users="matMenu">
-          <mat-menu-item class="details_div">
-            <div style="text-align: center; margin-bottom: 6px; font-size: 12px;"><u><b>Agent Details</b></u><br></div>
-            <div style="margin-left: 5px; margin-right: 5px;">
-              <b>Name:</b> {{user.username}} {{user.lastname}}<br>
-              <b>Email:</b> {{user.email}}
-            </div>
-        </mat-menu-item>
-        </mat-menu>
-      </div>
-    </mat-menu>
-    <div class="davinciChatHeader" style="width: 60%; text-align: center; align-self: center;"><h6 class="title" style="text-align: center; margin-bottom: 0px; vertical-align: middle;">DaVinci Chat <mat-icon class="cloudIcon">cloud</mat-icon></h6></div>
-    <div class="filler" style="width: 20%"></div>
+<div class="collapseDisplay">
+  <div class=collapse>
+    <label class="collapseLabel"><b>DaVinci Notifications</b></label>
+    <img id="arrow" class="viewResizeImage" title="Collapse" src="https://amcdavincistorage.blob.core.windows.net/icon-pack/section_collapse.png" (click)="triggerMinimize()">
   </div>
-    <!-- Container containing all of the messages -->
-    <div #entireChat class="chat">
-      <!-- A loop of the text messages sent and received -->
-      <div class="paragraphs" *ngFor="let text of texts; let i = index">
-        <!-- Checks the type of the message and if it is "sent" by the current user it will follow the css pertaining to sent messages -->
-        <div class="sentTexts" height="auto" overflow="auto" *ngIf="text[3] == 'send'">
-          <!-- Displays the message with the Users DaVinci Creator Studio name, the message underneath it, and the time the message was sent-->
-          <p class="myMessage" id="{{ 'message'+i }}"> <b>{{ text[0] }}</b>&#11088;<br> {{ text[1] }}</p>
-          <p class="date">{{text[2] | date: 'h:mm a'}}</p>
-          <span *ngIf="messageDelivered" class="date"><img src="https://img.icons8.com/ios/452/double-tick.png" width="9px" height="9x" style="margin-right: 5px;">Delivered</span>
+  <div id="minimizeContent" class="callBody">
+    <div class="editorFullDisplay">
+      <div class="minimizeContainer" id="notify">
+        <!-- Title on the chat box -->
+        <div class="head_of_sms">
+          <!--Attaching icon button to trigger the userlist from the User List menu-->
+          <div class="peopleButton" style="width: 20%"><button mat-button [matMenuTriggerFor]="agents"><mat-icon class="people" matBadge="{{ userCount }}" matBadgeSize="small">people</mat-icon></button></div>
+          <mat-menu #agents="matMenu">
+            <div style=" text-align: center; font-size: 13px;"><b>Agents Online ({{userCount}})</b></div>
+            <div *ngFor="let user of sortedList">
+              <button mat-menu-item [matMenuTriggerFor]="users" style="font-size: 13px;"><img src="https://www.clipartmax.com/png/middle/151-1515524_green-light-button.png" class="online_icon" width="10px" height="10px">
+                {{user.username}}</button>
+              <mat-menu #users="matMenu">
+                <mat-menu-item class="details_div">
+                  <div style="text-align: center; margin-bottom: 6px; font-size: 12px;"><u><b>Agent Details</b></u><br></div>
+                  <div style="margin-left: 5px; margin-right: 5px;">
+                    <b>Name:</b> {{user.username}} {{user.lastname}}<br>
+                    <b>Email:</b> {{user.email}}
+                  </div>
+                </mat-menu-item>
+              </mat-menu>
+            </div>
+          </mat-menu>
+          <div class="davinciChatHeader" style="width: 60%; text-align: center; align-self: center;"><h6 class="title" style="text-align: center; margin-bottom: 0px; vertical-align: middle;">DaVinci Chat <mat-icon class="cloudIcon">cloud</mat-icon></h6></div>
+          <div class="filler" style="width: 20%"></div>
         </div>
-        <!-- Checks the type of the message and if it is "received" by the current user it will follow the css pertaining to received messages -->
-        <div class="messageReceived" height="auto" overflow="auto" *ngIf="text[3] == 'receive'">
-          <!-- Displays the message with the senders DaVinci Creator Studio name, the message underneath it, and the time the message was sent-->
-          <p class="response"><b>{{ text[0] }}</b><br> {{ text[1] }}</p>
-          <p class="responseDate">{{text[2] | date: 'h:mm a'}}</p>
+          <!-- Container containing all of the messages -->
+          <div #entireChat class="chat">
+            <!-- A loop of the text messages sent and received -->
+            <div class="paragraphs" *ngFor="let text of texts; let i = index">
+              <!-- Checks the type of the message and if it is "sent" by the current user it will follow the css pertaining to sent messages -->
+              <div class="sentTexts" height="auto" overflow="auto" *ngIf="text[3] == 'send'">
+                <!-- Displays the message with the Users DaVinci Creator Studio name, the message underneath it, and the time the message was sent-->
+                <p class="myMessage" id="{{ 'message'+i }}"> <b>{{ text[0] }}</b>&#11088;<br> {{ text[1] }}</p>
+                <p class="date">{{text[2] | date: 'h:mm a'}}</p>
+                <span *ngIf="messageDelivered" class="date"><img src="https://img.icons8.com/ios/452/double-tick.png" width="9px" height="9x" style="margin-right: 5px;">Delivered</span>
+              </div>
+              <!-- Checks the type of the message and if it is "received" by the current user it will follow the css pertaining to received messages -->
+              <div class="messageReceived" height="auto" overflow="auto" *ngIf="text[3] == 'receive'">
+                <!-- Displays the message with the senders DaVinci Creator Studio name, the message underneath it, and the time the message was sent-->
+                <p class="response"><b>{{ text[0] }}</b><br> {{ text[1] }}</p>
+                <p class="responseDate">{{text[2] | date: 'h:mm a'}}</p>
+              </div>
+            </div>
+          </div>
+
+        <!-- The bottom container where the send button and textarea are held -->
+        <div class="textBar">
+          <div style="width: 80%;"><textarea
+            #notificationMessage = ""
+            class="textMessage"
+            id="notificationInput"
+            placeholder="Type a new message"
+            spellcheck="true"
+            (keyup.enter)="textSent(notificationMessage.value)"
+            cdkTextareaAutosize
+            #autosize="cdkTextareaAutosize"
+            cdkAutosizeMinRows="1"
+            cdkAutosizeMaxRows="5"></textarea></div>
+            <!-- On click of the button, calls textSent in the component which grabs the input, creates a message with the input and user data, and clears the input for a new message to be typed -->
+            <div style="width: 20%"><button class="sendButton" id="sender" (click)="textSent(notificationMessage.value)" mat-icon-button><mat-icon class="sendIcon">send</mat-icon></button></div>
         </div>
       </div>
     </div>
-
-  <!-- The bottom container where the send button and textarea are held -->
-  <div class="textBar">
-    <div style="width: 80%;"><textarea
-      #notificationMessage = ""
-      class="textMessage"
-      id="notificationInput"
-      placeholder="Type a new message"
-      spellcheck="true"
-      (keyup.enter)="textSent(notificationMessage.value)"
-      cdkTextareaAutosize
-      #autosize="cdkTextareaAutosize"
-      cdkAutosizeMinRows="1"
-      cdkAutosizeMaxRows="5"></textarea></div>
-      <!-- On click of the button, calls textSent in the component which grabs the input, creates a message with the input and user data, and clears the input for a new message to be typed -->
-      <div style="width: 20%"><button class="sendButton" id="sender" (click)="textSent(notificationMessage.value)" mat-icon-button><mat-icon class="sendIcon">send</mat-icon></button></div>
   </div>
 </div>
 
